# Woosh

./: .gitignore  README.md  app.py  gradio_Woosh-DFlow.py  gradio_Woosh-Flow.py  load_clap.py  pyproject.toml  test-Woosh-AE.py  test-Woosh-DFlow.py  test-Woosh-Flow.py  test-Woosh-VFlow.py  test.py  test_Woosh-AE.py  test_Woosh-DFlow.py  test_Woosh-DVFlow.py  test_Woosh-Flow.py  test_Woosh-VFlow.py  test_ae.py  test_flow.py  test_fm.py  test_vflow.py  test_video.py
070-sfxclap-laion-10s5c-puncdo-tCDUR-CURshuffledo-bs448-fp16/: weights.safetensors
api/: README.md  api_server.py  compute_agent.py
checkpoints/SFXflow/: config.yaml
checkpoints/SFXflowV-8s/: config.yaml
checkpoints/SFXflowmap/: config.yaml
checkpoints/Woosh-AE/: config.yaml
checkpoints/Woosh-DFlow/: config.yaml
checkpoints/Woosh-Flow/: config.yaml
docs/: flow-private.html  generate-ae-samples.yaml  generate-ae-section.py  generate-flow-samples-private.yaml  generate-flow-samples.yaml  generate-flow-section-private.py  generate-flow-section.py  generate-video-section.py  generating_video_demo_readme.md  index.html  requirements.txt  samples.md  video-index-section.html  video-section.html  videos.html  videos_template.html
docs/static/video_demo/foleybench/: manifest.yaml
docs/static/video_demo/ogame/: manifest.yaml
docs/static/video_demo/vggsound/: manifest.yaml
docs/static/video_demo/vggsound_recap/: manifest.yaml
fm-mmmssflux-m-pbds2-pclp70-pae-b96-e464/: config.yaml  weights.safetensors
meanflow-public-v2_13_ema/: config.yaml  weights.safetensors
pds-hf2-v48x4crclH4-t4g-w3-spfm16c/: weights.safetensors
reaper_plugin/: README.md  reapy_script.py
reaper_script/: reapy_script.py
sfxfm/components/: base.py  clap_conditioners.py
sfxfm/inference/: __init__.py  cfgpp.py  flowmap_sampler.py  flowmatching_sampler.py  meanflow_samplers.py  schedulers.py
sfxfm/model/: alternative_mmdit.py  discriminator_sana.py  dit.py  dit_blocks.py  dit_class.py  dit_flows.py  dit_pipeline.py  dit_types.py  ditv2.py  flowmap_from_pretrained.py  inpainting_finetune.py  ldm.py  lora.py  meanflow_from_pretrained.py  video_kontext.py
sfxfm/module/: __init__.py  audioretrieval_module.py  avocodo_module.py  base.py  cfg_utils.py  diffusion_ae_module.py  diffusion_module.py  edm_ea_module.py  edm_module.py  edm_module_dreambooth.py  edm_module_textboost.py  encoder_module.py  encoder_vq_module.py  external_module.py  utils.py
sfxfm/module/components/: autoencoders.py  base.py  clap_conditioners.py  conditioners.py
sfxfm/module/discriminator/: __init__.py  absif_disc.py  combd.py  disc_collection.py  pqmf.py  sbd.py  stftd.py
sfxfm/module/edm_samplers/: __init__.py  edm_sampler.py
sfxfm/module/loss/: __init__.py  ae_loss.py  auraloss.py  avocodo_loss.py  balancer.py  retrieval_loss.py  spectral_losses.py  vae_loss.py
sfxfm/module/metrics/: base_aggregatepool.py  clap_score.py  kl_passt.py  multimodal_metric_collection.py  quantization_metrics.py
sfxfm/module/model/: __init__.py  audioldm.py  autoencoder.py  avocodo.py  descript.py  diffit.py  diffusion_blocks.py  diffusion_vocos.py  dit.py  encodec.py  filter.py  lora.py  rave.py  stylevocos.py  transformer.py  updown_activation.py  vocos.py  vq_autoencoder.py  wnet.py
sfxfm/module/model/retrieval/: passt.py
sfxfm/module/quantizer/: embedding.py  quantizer.py
sfxfm/utils/: video.py  vit_helper.py
sfxfm/utils/audio/: __init__.py  audio.py
sfxfm/utils/cache/: __init__.py  cache.py
sfxfm/utils/hashing/: __init__.py  hashing.py
sfxfm/utils/model_store/: __init__.py  model_store.py
woosh/components/: base.py  clap_conditioners.py
woosh/inference/: flowmap_sampler.py  flowmatching_sampler.py
woosh/model/: dit_types.py  flowmap_from_pretrained.py  ldm.py
woosh/utils/: synchformer.py
