[project]
name = "sfxfm"
version = "0.1.0"
description = "Public release of the Sound Effect Foundation model by Sony AI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
# license-files = ["LICEN[CS]E*"]
keywords = ["genai", "flow matching", "sound", "sfx"]
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "lightning>=2.5.6",
    "timm>=1.0.22",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchdiffeq>=0.2.5",
    "transformers>=4.57.2",
    "hear21passt==0.0.26",
    "pydantic>=2.12.5",
    "omegaconf>=2.3.0",
]

[tool.uv]
extra-build-variables = { minimp3py = { CFLAGS='-O3 -march=native'} }
# to avoid installing dependencies like:
# pip install hear21passt --no-dependencies
dependency-metadata = [
    { name = "hear21passt", version = "0.0.26", requires-dist = []},
]
default-groups = "all"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
minimp3py = { git = "https://github.com/f0k/minimp3py/" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
audioio = [
    "soundfile>=0.13.1",
]
dev = [
    "ipykernel",
    "ipython",
    "ruff>=0.14.6",
]
