[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "woosh"
version = "0.1.1"
description = "Woosh Sound Effect Foundation model (Sony AI)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
# license-files = ["LICEN[CS]E*"]
keywords = ["genai", "flow matching", "sound", "sfx"]
dependencies = [
  "einops>=0.8.1",
  "hydra-core>=1.3.2",
  "lightning>=2.5.6",
  "timm>=1.0.22",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchdiffeq>=0.2.5",
  "transformers>=4.57.2",
  "hear21passt==0.0.26",
  "pydantic>=2.12.4",
  "omegaconf>=2.3.0",
  "av>=16.1.0",
  "requests",
  "gradio>=6.9.0",
]
[project.optional-dependencies]
# cpu = ["torch==2.8.0", "torchvision==0.23.0", "torchaudio==2.8.0"]
# cuda = ["torch==2.8.0", "torchvision==0.23.0", "torchaudio==2.8.0"]
cpu = ["torch", "torchvision", "torchaudio"]
cuda = ["torch", "torchvision", "torchaudio"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
]
# to avoid installing dependencies like:
# pip install hear21passt --no-dependencies
dependency-metadata = [
  { name = "hear21passt", version = "0.0.26", requires-dist = [
  ] },
]
default-groups = "all"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cuda" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cuda" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
api = ["fastapi>=0.124.4", "uvicorn>=0.38.0"]
reaper = [
    "httpx>=0.28.1",
    "python-reapy>=0.10.0",
]
audioio = ["soundfile>=0.13.1"]
demo = ["gradio>=6"]
dev = ["ipykernel", "ipython", "ruff>=0.14.6"]
